fix user study set repository bug